optimal code modal login register + install redux toolkit

--- a/src/sass/components/listMovie.scss
+++ b/src/sass/components/listMovie.scss
@@ -35,10 +35,10 @@
     .btn_buy {
       border: 2px solid orange;
       margin: 0 auto;
-      width: 140px;
-      font-size: 19px;
+      width: 130px;
+      font-size: 17px;
       text-transform: uppercase;
-      background: orange;
+      background: #ffa500e8;
       color: white;
       padding: 5px 10px;
       border-radius: 10px;
