--- a/src/sass/components/subcomponents/feedback.scss
+++ b/src/sass/components/subcomponents/feedback.scss
@@ -11,7 +11,6 @@
   &-form {
     margin: auto;
     width: 360px;
-
     background-color: white;
     border-radius: 10px;
     display: flex;
@@ -55,6 +54,7 @@
       .stars {
         padding-top: 20px;
         display: flex;
+        justify-content: center;
         flex-direction: row;
       }
       .textarea {
