--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,150 +1,153 @@
 @import "../mixins.scss";
 
-.header {
-  position: relative;
-  width: 1200px;
-  margin: 0 auto;
-  height: 70px;
+header {
   border-bottom: 2px solid orange;
-  .main {
-    display: grid;
-    grid-template-columns: 1fr 4fr 2.5fr 1.5fr;
-    color: white;
+  .header {
     position: relative;
-    .logo {
-      color: orange;
-      font-size: 40px;
-      cursor: pointer;
-      line-height: 70px;
-      transform: translateY(-2px);
-      text-shadow: 0 0 10px 1px orange;
-      &:hover {
-        transform: translateY(-3px);
-        transition: 0.2s;
-      }
-    }
-    .navbar ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      @include absoluteCenter("col");
-      li {
-        margin-right: 15px;
-        width: 100px;
-        text-align: center;
-        text-decoration: none;
-        float: left;
+    width: 1200px;
+    margin: 0 auto;
+    height: 70px;
+    .main {
+      display: grid;
+      grid-template-columns: 1fr 4fr 2.5fr 1.5fr;
+      color: white;
+      position: relative;
+      .logo {
+        color: orange;
+        font-size: 40px;
         cursor: pointer;
-        text-transform: uppercase;
-        font-size: 15px;
-        border-radius: 10px;
-        padding: 6px 5px 5px 5px;
-        border: 2px solid orange;
-        color: white;
-        i {
-          color: orange;
-          font-size: 12px;
-        }
+        line-height: 70px;
+        transform: translateY(-2px);
+        text-shadow: 0 0 10px 1px orange;
         &:hover {
-          border: 2px solid white;
-          background-color: orange;
+          transform: translateY(-3px);
+          transition: 0.2s;
+        }
+      }
+      .navbar ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        @include absoluteCenter("col");
+        li {
+          margin-right: 15px;
+          width: 100px;
+          text-align: center;
+          text-decoration: none;
+          float: left;
+          cursor: pointer;
+          text-transform: uppercase;
+          font-size: 15px;
+          border-radius: 10px;
+          padding: 6px 5px 5px 5px;
+          border: 2px solid orange;
+          color: white;
           i {
-            color: white;
+            color: orange;
+            font-size: 12px;
+          }
+          &:hover {
+            border: 2px solid white;
+            background-color: orange;
+            i {
+              color: white;
+            }
           }
         }
       }
-    }
-    .search {
-      margin-top: 20px;
-      width: 300px;
-      height: 30px;
-      .formsearch {
-        width: 100%;
-        height: 105%;
-        vertical-align: middle;
-        display: flex;
-        background-color: white;
-        border-radius: 20px;
-        .ipsearch {
-          border: none;
-          width: 85%;
-          height: 93%;
-          padding: 1px 8px 0 12px;
-          outline: none;
+      .search {
+        margin-top: 20px;
+        width: 300px;
+        height: 30px;
+        .formsearch {
+          width: 100%;
+          height: 105%;
+          vertical-align: middle;
+          display: flex;
+          background-color: white;
           border-radius: 20px;
-          font-size: 12px;
-        }
-        div {
-          padding-top: 8px;
-          color: gray;
-        }
-        &:hover {
-          box-shadow: 0 0 4px orange;
+          .ipsearch {
+            border: none;
+            width: 85%;
+            height: 93%;
+            padding: 1px 8px 0 12px;
+            outline: none;
+            border-radius: 20px;
+            font-size: 12px;
+          }
+          div {
+            padding-top: 8px;
+            color: gray;
+          }
+          &:hover {
+            box-shadow: 0 0 4px orange;
+          }
         }
       }
-    }
 
-    .login {
-      width: 100%;
-      padding-right: 10px;
-      margin-top: 17px;
-      height: 36px;
-      box-shadow: 0 0 3px orange;
-      font-size: 17px;
-      font-weight: bold;
-      border-radius: 7px;
-      cursor: pointer;
-      color: sandybrown;
-      background: none;
-      outline: none;
-      border: none;
-      padding-top: 4px;
-      .avt_user {
-        vertical-align: middle;
-        width: 25px;
-        height: 25px;
-        border-radius: 50%;
-        margin-top: -5px;
-      }
-      i {
-        font-size: 15px;
-      }
-      &:hover {
-        box-shadow: 0 0 8px orange;
-        color: orange;
-      }
-    }
-  }
-  .nav_user {
-    position: absolute;
-    margin: 0 auto;
-    width: 1200px;
-    top: 60px;
-    display: grid;
-    grid-template-columns: 1000px 200px;
-    &-btn {
-      box-shadow: 0 0 3px orange;
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 7px;
-      cursor: pointer;
-      color: whitesmoke;
-      background-color: #333;
-      z-index: 2;
-      &-children {
+      .login {
+        display: block;
+        width: 100%;
+        padding-right: 15px;
+        margin-top: 17px;
         height: 36px;
-        line-height: 36px;
-        text-align: center;
-        // border-bottom: 3px solid orange;
+        box-shadow: 0 0 3px orange;
+        font-size: 17px;
+        font-weight: bold;
+        border-radius: 7px;
+        cursor: pointer;
+        color: sandybrown;
+        background: none;
+        outline: none;
+        border: none;
+
+        .avt_user {
+          vertical-align: middle;
+          width: 21px;
+          height: 21px;
+          border-radius: 50%;
+          margin-top: -3px;
+        }
         i {
-          color: orange;
+          font-size: 15px;
         }
         &:hover {
           box-shadow: 0 0 8px orange;
           color: orange;
-          background-color: white;
-          border-radius: 7px;
+        }
+      }
+    }
+    .nav_user {
+      position: absolute;
+      margin: 0 auto;
+      width: 1200px;
+      top: 60px;
+      display: grid;
+      grid-template-columns: 1000px 200px;
+      &-btn {
+        box-shadow: 0 0 3px orange;
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 7px;
+        cursor: pointer;
+        color: whitesmoke;
+        background-color: #333;
+        z-index: 2;
+        &-children {
+          height: 36px;
+          line-height: 36px;
+          text-align: center;
+          color: whitesmoke;
+          i {
+            color: orange;
+          }
+          &:hover {
+            box-shadow: 0 0 8px orange;
+            color: orange;
+            background-color: white;
+            border-radius: 7px;
+          }
         }
       }
     }
