--- a/src/sass/components/subcomponents/feedback.scss
+++ b/src/sass/components/subcomponents/feedback.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
+  margin-bottom: 10px;
   .feedback {
     border: 1px solid gray;
     border-radius: 10px;
