--- a/src/sass/components/subcomponents/feedback.scss
+++ b/src/sass/components/subcomponents/feedback.scss
@@ -58,6 +58,7 @@
       .content_feedback {
         margin-top: 5px;
         margin-bottom: 10px;
+        overflow-x: hidden;
       }
       .line {
         margin-top: 10px;
