--- a/src/sass/pages/movieDetail.scss
+++ b/src/sass/pages/movieDetail.scss
@@ -121,6 +121,7 @@
           box-shadow: 0px 2px 8px whitesmoke;
           transform: rotateX(-50deg);
         }
+        // booking loccal
         .importpicker {
           margin-left: -27px;
           .seat {
