--- a/src/sass/pages/movieDetail.scss
+++ b/src/sass/pages/movieDetail.scss
@@ -70,11 +70,16 @@
       padding-bottom: 20px;
       border-bottom: 1px solid orange;
       .col-1 {
-        display: flex;
-        column-gap: 10px;
-        line-height: 40px;
-        font-size: 18px;
+        font-size: 19px;
+        font-weight: bold;
+        .row {
+          display: grid;
+          grid-template-columns: 1fr 2.5fr;
+          gap: 10px;
+          margin-top: 15px;
+        }
         div select {
+          margin-top: -5px;
           width: 200px;
           height: 25px;
           border-radius: 5px;
@@ -82,6 +87,10 @@
           border: none;
           outline: none;
           padding-left: 5px;
+          text-align: center;
+          option {
+            width: 100%;
+          }
         }
       }
       .col-2 {
