--- a/src/sass/pages/movie.scss
+++ b/src/sass/pages/movie.scss
@@ -3,6 +3,8 @@
     width: 1200px;
     margin: 0 auto;
     color: orange;
+    font-size: 18px;
+    font-weight: bold;
     .box_filter {
       display: flex;
       .filter {
