--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -9,7 +9,7 @@ header {
     height: 70px;
     .main {
       display: grid;
-      grid-template-columns: 1fr 4fr 2.5fr 1.5fr;
+      grid-template-columns: 0.9fr 4fr 2.5fr 1.5fr;
       color: white;
       position: relative;
       .logo {
@@ -27,10 +27,11 @@ header {
       .navbar ul {
         list-style-type: none;
         margin: 0;
-        padding: 0;
+        padding: 0 0 0 10px;
         overflow: hidden;
         @include absoluteCenter("col");
         li {
+          font-weight: bold;
           margin-right: 15px;
           width: 100px;
           text-align: center;
@@ -48,11 +49,9 @@ header {
             font-size: 12px;
           }
           &:hover {
-            border: 2px solid white;
-            background-color: orange;
-            i {
-              color: white;
-            }
+            // border: 2px solid white;
+            color: orange;
+            background-color: lightyellow;
           }
         }
       }
