--- a/src/sass/components/subcomponents/inputFields.scss
+++ b/src/sass/components/subcomponents/inputFields.scss
@@ -1,16 +1,17 @@
 .item_Input {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
   column-gap: 5px;
   .label {
-    width: 210px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
     text-align: right;
     height: 30px;
     line-height: 30px;
     color: orange;
   }
   .txt_input {
+    font-size: 20px;
     height: 30px;
     outline: none;
     border: none;
