--- a/src/sass/pages/myprofile.scss
+++ b/src/sass/pages/myprofile.scss
@@ -25,24 +25,68 @@
         box-shadow: 0 1px 10px orange;
       }
     }
-    .name {
-      font-size: 30px;
-      font-weight: bold;
-      text-align: center;
-    }
-    .biography {
-      padding-top: 20px;
+    .row_mid {
       width: 400px;
-      font-size: 20px;
       margin: 0 auto;
-      text-align: center;
+      // display: grid;
+      // justify-content: center;
+      .name {
+        padding-top: 10px;
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+      }
+      .biography {
+        padding-top: 20px;
+        width: 400px;
+        font-size: 20px;
+        text-align: center;
+      }
+    }
+
+    .text {
+      margin-top: 30px;
+      text-transform: uppercase;
+      font-size: 20px;
+      color: orange;
+      font-weight: bold;
+    }
+    .default_main {
+      margin-top: 20px;
+      font-size: 20px;
+      display: grid;
+      grid-template-columns: 240px 300px;
+      line-height: 25px;
+      .left {
+        font-weight: bold;
+        font-size: 20px;
+      }
     }
     .form_edit {
-      margin: 20px 0 20px 0;
-      width: 100%;
+      margin: 20px auto;
+      padding: 20px 50px 0 0;
+
+      width: 80%;
       border: 1px solid orange;
       box-shadow: 1px 1px 5px 0 orange;
       background-color: white;
+      .btnEdit {
+        margin: 5px 0 15px 120px;
+        padding: 10px 20px 10px 15px;
+        font-size: 15px;
+        font-weight: bold;
+        color: orange;
+        background: none;
+        text-align: center;
+        border-radius: 5px;
+        border: 1px solid orange;
+        cursor: pointer;
+        &:hover {
+          background: orange;
+          color: whitesmoke;
+          box-shadow: 0 0 5px orange;
+        }
+      }
     }
   }
 }
