--- a/src/sass/pages/myprofile.scss
+++ b/src/sass/pages/myprofile.scss
@@ -57,7 +57,7 @@
       font-size: 20px;
       display: grid;
       grid-template-columns: 240px 300px;
-      line-height: 25px;
+      line-height: 30px;
       .left {
         font-weight: bold;
         font-size: 20px;
@@ -66,7 +66,7 @@
     .form_edit {
       margin: 20px auto;
       padding: 20px 50px 0 0;
-
+      border-radius: 10px;
       width: 80%;
       border: 1px solid orange;
       box-shadow: 1px 1px 5px 0 orange;
