done booking, payment with paypal

--- a/src/sass/components/subcomponents/feedback.scss
+++ b/src/sass/components/subcomponents/feedback.scss
@@ -40,6 +40,7 @@
             vertical-align: middle;
             width: 30px;
             height: 30px;
+            object-fit: cover;
             border-radius: 50%;
           }
           .name_user {
