--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -104,6 +104,7 @@ header {
           vertical-align: middle;
           width: 21px;
           height: 21px;
+          object-fit: cover;
           border-radius: 50%;
           margin-top: -3px;
         }
