update UI report

--- a/src/sass/pages/news.scss
+++ b/src/sass/pages/news.scss
@@ -6,6 +6,7 @@
     font-family: auto;
     width: 1200px;
     margin: 0 auto;
+
     .tag_movie {
       padding-top: 10px;
       padding-bottom: 10px;
@@ -295,4 +296,8 @@
       }
     }
   }
+}
+.noBE {
+  margin-top: 20px;
+  font-size: 30px;
 }
