--- a/src/sass/components/subcomponents/vocherHome.scss
+++ b/src/sass/components/subcomponents/vocherHome.scss
@@ -2,6 +2,7 @@
   width: 1200px;
   margin: 10px auto;
   font-family: "Lexend", sans-serif;
+  color: #ffff;
   .fixfont-family {
     display: flex;
     column-gap: 20px;
@@ -170,6 +171,7 @@
     }
     .thethaoluannhieux {
       display: flex;
+      padding-top: 5px;
     }
     .sox {
       display: inline-block;
