done chat messenger + fix UI + validate input

--- a/src/sass/components/subcomponents/register.scss
+++ b/src/sass/components/subcomponents/register.scss
@@ -16,38 +16,27 @@
       font-size: 30px;
       font-weight: bold;
       color: grey;
-      padding-bottom: 20px;
+      padding-bottom: 10px;
     }
     .input_data {
       padding: 12px 2px 6px 4px;
-      margin-bottom: 15px;
+      margin-top: 10px;
       font-size: 16px;
       border: none;
       border-bottom: 1px solid orange;
       outline: none;
       width: 294px;
     }
-    .flex {
-      display: flex;
-      justify-content: space-between;
-      .label_checkbox {
-        color: gray;
-        cursor: pointer;
-      }
-      .forgot {
-        font-size: 15px;
-        font-style: italic;
-        color: orange;
-        text-decoration: none;
-
-        &:hover {
-          border-bottom: 0.1px solid orange;
-        }
-      }
+    .validate {
+      display: block;
+      margin: 5px 0px -10px;
+      color: orange;
+      font-size: 14px;
     }
+
     .btnLogin {
       margin: 0 auto;
-      margin-top: 5px;
+      margin-top: 20px;
       width: 200px;
       height: 38px;
       font-size: 18px;
