--- a/src/sass/components/subcomponents/inputFields.scss
+++ b/src/sass/components/subcomponents/inputFields.scss
@@ -4,18 +4,20 @@
   column-gap: 8px;
   .label {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     text-align: right;
     height: 30px;
-    line-height: 30px;
+    line-height: 60px;
     color: orange;
   }
   .txt_input {
-    font-size: 20px;
+    margin-top: 15px;
+    font-size: 18px;
     height: 30px;
     outline: none;
     border: none;
     text-decoration: none;
     border-radius: 5px;
+    border-bottom: 2px solid orange;
   }
 }
