--- a/src/sass/components/subcomponents/login.scss
+++ b/src/sass/components/subcomponents/login.scss
@@ -16,18 +16,25 @@
       font-size: 30px;
       font-weight: bold;
       color: grey;
-      padding-bottom: 20px;
+      padding-bottom: 10px;
     }
     .input_data {
       padding: 12px 2px 6px 4px;
-      margin-bottom: 15px;
+      margin-top: 10px;
       font-size: 16px;
       border: none;
       border-bottom: 1px solid orange;
       outline: none;
       width: 294px;
     }
+    .validate {
+      display: block;
+      margin: 5px 0px -10px;
+      color: orange;
+      font-size: 14px;
+    }
     .flex {
+      margin-top: 20px;
       display: flex;
       justify-content: space-between;
       .label_checkbox {
