--- a/src/sass/pages/bookingHistory.scss
+++ b/src/sass/pages/bookingHistory.scss
@@ -4,8 +4,10 @@
     margin: 0 auto;
     color: white;
     .title {
+      text-align: center;
+      color: orange;
       margin-top: 20px;
-      font-size: 20px;
+      font-size: 25px;
       font-weight: bold;
     }
     .form_list {
