fix check value + add page Support + fix UI

--- a/src/sass/pages/news.scss
+++ b/src/sass/pages/news.scss
@@ -179,7 +179,7 @@
         margin-bottom: 5px;
         padding: 4px 7px;
         border-radius: 9px;
-        background: #0078d7;
+        background: orange;
         color: #fff;
         font-size: 11px;
         border: none;
