--- a/src/sass/pages/support.scss
+++ b/src/sass/pages/support.scss
@@ -42,7 +42,7 @@
             line-height: 25px;
           }
           .textx {
-            color: blue;
+            color: orange;
             font-weight: bold;
             font-size: 19px;
           }
