--- a/src/sass/pages/myprofile.scss
+++ b/src/sass/pages/myprofile.scss
@@ -4,6 +4,8 @@
     width: 1200px;
     margin: 0 auto;
     color: white;
+    // border-left: 1px solid orange;
+    // border-right: 1px solid orange;
     .image {
       .background {
         margin: 10px auto 105px;
