--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,20 @@ body {
   font-family: "Lexend", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* scrollbar */
+  height: 500vh;
 }
-
+body::-webkit-scrollbar {
+  width: 10px;
+}
+body::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to bottom, orange, #38444de0);
+  border-radius: 100rem;
+}
+body::-webkit-scrollbar-track {
+  background-color: gray;
+  border-radius: 100rem;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
