--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -207,6 +207,17 @@ header {
           }
         }
       }
+      .boxlist::-webkit-scrollbar {
+        width: 8px;
+      }
+      .boxlist::-webkit-scrollbar-thumb {
+        background-image: linear-gradient(to bottom, orange, #333);
+        border-radius: 100rem;
+      }
+      .boxlist::-webkit-scrollbar-track {
+        background-color: gray;
+        border-radius: 100rem;
+      }
     }
   }
 }
