--- a/src/sass/pages/myprofile.scss
+++ b/src/sass/pages/myprofile.scss
@@ -1,31 +1,55 @@
 .container_myprofile {
   .main {
-    position: relative;
     width: 1200px;
     margin: 0 auto;
-    color: white;
+    color: black;
+    background-color: #f0f2f5;
+    border-radius: 10px;
+    border: 5px solid gray;
     // border-left: 1px solid orange;
     // border-right: 1px solid orange;
     .image {
+      position: relative;
       .background {
-        margin: 10px auto 105px;
+        margin: 0px auto 105px;
         border-radius: 10px;
         width: 100%;
         height: 250px;
-        position: relative;
-        text-align: center;
       }
-      .avt_user {
+      .upload {
         position: absolute;
-        margin-top: 150px;
+        top: 150px;
         left: 50%;
         transform: translateX(-50%);
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        object-fit: cover;
-        border: 5px solid orange;
-        box-shadow: 0 1px 10px orange;
+        .avt_user {
+          width: 200px;
+          height: 200px;
+          border-radius: 50%;
+          object-fit: cover;
+          border: 5px solid orange;
+          box-shadow: 0 1px 10px orange;
+        }
+        .round {
+          position: absolute;
+          bottom: 15px;
+          right: 10px;
+          background: rgb(0 0 0 / 20%);
+          width: 40px;
+          height: 40px;
+          line-height: 41px;
+          text-align: center;
+          border-radius: 50%;
+          overflow: hidden;
+          input[type="file"] {
+            position: absolute;
+            margin: 10px 20px;
+            transform: scale(2);
+            opacity: 0;
+          }
+          input[type="file"]::-webkit-file-upload-button {
+            cursor: pointer;
+          }
+        }
       }
     }
     .row_mid {
@@ -40,31 +64,34 @@
         text-align: center;
       }
       .biography {
-        padding-top: 20px;
+        padding-top: 10px;
         width: 400px;
         font-size: 20px;
         text-align: center;
       }
     }
     .backgroundgif {
-      background-image: url("../../assets/images/backgroundformmyprofile.gif");
-      background-repeat: no-repeat;
-      background-size: 100% 700px;
+      // background-image: url("../../assets/images/backgroundformmyprofile.gif");
+      // background-repeat: no-repeat;
+      // background-size: 100% 700px;
       margin-top: 20px;
-      margin-bottom: 20px;
-      border-radius: 30px;
-      border: 1px solid orange;
+      // margin-bottom: 20px;
+      // border-radius: 30px;
+      // border: 1px solid orange;
       .margingif {
-        margin-top: 20px;
-        padding: 20px 30px 20px 30px;
+        padding: 0 40px 20px 40px;
         .text {
+          padding-top: 20px;
+          padding-left: 10px;
+          border-radius: 10px;
+          border-top: 1px solid gray;
           text-transform: uppercase;
-          font-size: 20px;
+          font-size: 25px;
           color: orange;
           font-weight: bold;
         }
         .default_main {
-          margin-top: 20px;
+          margin: 10px 0 0 10px;
           font-size: 20px;
           display: grid;
           grid-template-columns: 240px 300px;
