--- a/src/sass/components/subcomponents/login.scss
+++ b/src/sass/components/subcomponents/login.scss
@@ -93,6 +93,10 @@
       color: gray;
     }
     .login_icon {
+      display: flex;
+      gap: 25px;
+      width: 265px;
+      margin: 0 auto;
       margin-top: 15px;
       text-align: center;
       font-size: 16px;
