fix appId tool fb + add carousel 3d page home

--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -2,6 +2,9 @@
   .main {
     width: 1200px;
     margin: 0 auto;
+    .carousel_____container {
+      width: 1200px !important;
+    }
     .tag_movie {
       padding-top: 10px;
       .title {
