--- a/src/sass/components/subcomponents/formModal.scss
+++ b/src/sass/components/subcomponents/formModal.scss
@@ -18,12 +18,12 @@
       float: right;
       font-size: 21px;
       border: none;
-      background: #ffa50033;
+      background: rgb(255 165 0 / 6%);
       color: orange;
       height: 30px;
       width: 30px;
       margin: 5px;
-      border-radius: 2px;
+      border-radius: 5px;
       cursor: pointer;
       &:hover {
         box-shadow: 0 0 5px #ffd000b0;
