--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -13,9 +13,9 @@
     .col {
       .title {
         border-left: 5px solid orange;
+        margin-bottom: 10px;
       }
       .info {
-        padding-top: 13px;
         text-transform: none;
         font-size: 14px;
         line-height: 25px;
