--- a/src/sass/pages/myprofile.scss
+++ b/src/sass/pages/myprofile.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
     color: black;
     background-color: #f0f2f5;
-    border-radius: 10px;
+    border-radius: 15px;
     border: 5px solid gray;
     // border-left: 1px solid orange;
     // border-right: 1px solid orange;
@@ -15,6 +15,7 @@
         border-radius: 10px;
         width: 100%;
         height: 250px;
+        overflow: hidden;
       }
       .upload {
         position: absolute;
