--- a/src/sass/pages/support.scss
+++ b/src/sass/pages/support.scss
@@ -48,6 +48,7 @@
           }
         }
         .plugincmt {
+          border-radius: 10px;
           margin: 20px 125px;
           background-color: #f4f4f4;
         }
