--- a/src/sass/components/loading.scss
+++ b/src/sass/components/loading.scss
@@ -6,9 +6,10 @@
   right: 0;
   display: flex;
   z-index: 100;
+  background-color: rgba(0, 0, 0, 0.2);
   .loading {
     margin: auto;
-    width: 150px;
-    height: 150px;
+    width: 80px;
+    height: 80px;
   }
 }
