--- a/src/sass/components/subcomponents/login.scss
+++ b/src/sass/components/subcomponents/login.scss
@@ -19,6 +19,7 @@
       padding-bottom: 10px;
     }
     .input_data {
+      position: relative;
       padding: 12px 2px 6px 4px;
       margin-top: 10px;
       font-size: 16px;
@@ -27,12 +28,31 @@
       outline: none;
       width: 294px;
     }
-    .validate {
-      display: block;
-      margin: 5px 0px -10px;
-      color: orange;
-      font-size: 14px;
+    .parent_input {
+      position: relative;
+      .input_data {
+        padding: 12px 2px 6px 4px;
+        margin-top: 10px;
+        font-size: 16px;
+        border: none;
+        border-bottom: 1px solid orange;
+        outline: none;
+        width: 294px;
+      }
+      .validate {
+        display: block;
+        margin: 5px 0px -10px;
+        color: orange;
+        font-size: 14px;
+      }
+      .eye {
+        color: orange;
+        position: absolute;
+        top: 22px;
+        right: 12px;
+      }
     }
+
     .flex {
       margin-top: 20px;
       display: flex;
