--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,32 @@
+/* @import "./sass/index.css"; */
 body {
-  background-color: #333;
-  margin: 0;
-  font-family: "Lexend", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background-color: #333;
+	margin: 0;
+	font-family: "Lexend", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 /* scrollbar */
 body::-webkit-scrollbar {
-  width: 10px;
+	width: 10px;
 }
 body::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(to bottom, orange, #38444dbf);
-  border-radius: 100rem;
+	background-image: linear-gradient(to bottom, orange, #38444dbf);
+	border-radius: 100rem;
 }
 body::-webkit-scrollbar-track {
-  background-color: gray;
-  border-radius: 100rem;
-  margin-top: 5px;
-  margin-bottom: 5px;
+	background-color: gray;
+	border-radius: 100rem;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	scroll-behavior: smooth;
 }
