--- a/src/sass/pages/movieDetail.scss
+++ b/src/sass/pages/movieDetail.scss
@@ -1,218 +1,219 @@
 .detail {
-  .main {
-    width: 1200px;
-    margin: 0 auto;
-    color: white;
-    .title {
-      color: rgba(255, 255, 255, 0.7);
-      font-size: 25px;
-      padding: 10px 0;
-    }
-    .detailmovie {
-      display: grid;
-      grid-template-columns: 720px 480px;
-      .info {
-        display: flex;
-        img {
-          height: 270px;
-          max-height: 270px;
-          border-radius: 5px;
-          padding-right: 20px;
-        }
-        &-text {
-          font-size: 22px;
+	.main {
+		width: 1200px;
+		margin: 0 auto;
+		color: white;
+		.title {
+			color: rgba(255, 255, 255, 0.7);
+			font-size: 25px;
+			padding: 10px 0;
+		}
+		.detailmovie {
+			display: grid;
+			grid-template-columns: 720px 480px;
+			.info {
+				display: flex;
+				img {
+					height: 270px;
+					max-height: 270px;
+					border-radius: 5px;
+					padding-right: 20px;
+				}
+				&-text {
+					font-size: 22px;
 
-          .name {
-            color: orange;
-            padding-bottom: 5px;
-            text-transform: capitalize;
-          }
-          .rate {
-            display: flex;
-            .rating {
-              font-size: 14px;
-              padding-left: 5px;
-            }
-          }
+					.name {
+						color: orange;
+						padding-bottom: 5px;
+						text-transform: capitalize;
+					}
+					.rate {
+						display: flex;
+						.rating {
+							font-size: 14px;
+							padding-left: 5px;
+						}
+					}
 
-          .text {
-            font-size: 18px;
-            line-height: 1.5;
-            padding-top: 15px;
-            text-transform: capitalize;
-            color: rgba(255, 255, 255, 0.7);
-          }
-        }
-      }
-    }
-    .description {
-      border-bottom: 1px solid orange;
-      padding-bottom: 20px;
-      .btn_description i {
-        cursor: pointer;
-      }
-      div {
-        padding-top: 20px;
-        text-align: center;
-        font-weight: bold;
-        color: orange;
-        font-size: 18px;
-      }
-      p {
-        margin: 5px 0 0;
-        color: rgba(255, 255, 255, 0.7);
-      }
-    }
-    .selectMovie {
-      display: grid;
-      grid-template-columns: 2fr 5fr 3fr;
-      gap: 20px;
-      padding-bottom: 20px;
-      border-bottom: 1px solid orange;
-      .col-1 {
-        font-size: 19px;
-        font-weight: bold;
-        .row {
-          display: grid;
-          grid-template-columns: 1fr 2.5fr;
-          gap: 10px;
-          margin-top: 15px;
-        }
-        div select {
-          margin-top: -5px;
-          width: 200px;
-          height: 25px;
-          border-radius: 5px;
-          font-size: 15px;
-          border: none;
-          outline: none;
-          padding-left: 5px;
-          option {
-            width: 100%;
-            text-align: center;
-          }
-        }
-      }
-      .col-2 {
-        padding-top: 7px;
-        padding-bottom: 5px;
-        perspective: 1000px;
-        .seatx {
-          background-color: gray;
-          height: 15px;
-          width: 18px;
-          border-top-left-radius: 10px;
-          border-top-right-radius: 10px;
-          margin: auto;
-          cursor: pointer;
-        }
-        .flex {
-          display: flex;
-          margin: auto;
-          width: 280px;
-          gap: 10px;
-          div {
-            display: flex;
-          }
-          .selectedx .seatx {
-            background-color: green;
-          }
-          .occupiedx .seatx {
-            background-color: orange;
-          }
-        }
-        .screen {
-          padding: 10px 0;
-          width: 280px;
-          height: 70px;
-          background-color: whitesmoke;
-          margin: auto;
-          box-shadow: 0px 2px 8px whitesmoke;
-          transform: rotateX(-50deg);
-        }
-        // booking loccal
-        .importpicker {
-          margin-left: -27px;
-          .seat {
-            background-color: gray;
-            height: 25px;
-            margin: 2px 5px 0px 0px;
-          }
-          .seat__number {
-            margin-top: 3px;
-          }
-          // .seat-picker {
-          //   margin: auto;
-          // }
-          .seat--reserved {
-            background-color: orange;
-          }
+					.text {
+						font-size: 18px;
+						line-height: 1.5;
+						padding-top: 15px;
+						text-transform: capitalize;
+						color: rgba(255, 255, 255, 0.7);
+					}
+				}
+			}
+		}
+		.description {
+			border-bottom: 1px solid orange;
+			padding-bottom: 20px;
+			.btn_description i {
+				cursor: pointer;
+			}
+			div {
+				padding-top: 20px;
+				text-align: center;
+				font-weight: bold;
+				color: orange;
+				font-size: 18px;
+			}
+			p {
+				margin: 5px 0 0;
+				color: rgba(255, 255, 255, 0.7);
+			}
+		}
+		.selectMovie {
+			display: grid;
+			grid-template-columns: 2fr 5fr 3fr;
+			gap: 20px;
+			padding-bottom: 20px;
+			border-bottom: 1px solid orange;
+			.col-1 {
+				font-size: 19px;
+				font-weight: bold;
+				.row {
+					display: grid;
+					grid-template-columns: 1fr 2.5fr;
+					gap: 10px;
+					margin-top: 15px;
+				}
+				div select {
+					margin-top: -5px;
+					width: 200px;
+					height: 25px;
+					border-radius: 5px;
+					font-size: 15px;
+					border: none;
+					outline: none;
+					padding-left: 5px;
+					option {
+						width: 100%;
+						text-align: center;
+					}
+				}
+			}
+			.col-2 {
+				padding-top: 7px;
+				padding-bottom: 5px;
+				perspective: 1000px;
+				.seatx {
+					background-color: gray;
+					height: 15px;
+					width: 18px;
+					border-top-left-radius: 10px;
+					border-top-right-radius: 10px;
+					margin: auto;
+					cursor: pointer;
+				}
+				.flex {
+					display: flex;
+					margin: auto;
+					width: 280px;
+					gap: 10px;
+					div {
+						display: flex;
+					}
+					.selectedx .seatx {
+						background-color: green;
+					}
+					.occupiedx .seatx {
+						background-color: orange;
+					}
+				}
+				.screen {
+					padding: 10px 0;
+					width: 280px;
+					height: 70px;
+					background-color: whitesmoke;
+					margin: auto;
+					box-shadow: 0px 2px 8px whitesmoke;
+					transform: rotateX(-50deg);
+				}
+				// booking loccal
+				.importpicker {
+					margin-left: -27px;
+					.seat {
+						background-color: gray;
+						height: 25px;
+						margin: 2px 5px 0px 0px;
+					}
+					.seat__number {
+						margin-top: 3px;
+					}
+					// .seat-picker {
+					//   margin: auto;
+					// }
+					.seat--reserved {
+						background-color: orange;
+					}
 
-          .seat--selected {
-            background-color: green;
-          }
+					.seat--selected {
+						background-color: green;
+					}
 
-          .seat-picker {
-            margin: auto;
-          }
+					.seat-picker {
+						margin: auto;
+					}
 
-          .seat-picker_row {
-          }
+					.seat-picker_row {
+					}
 
-          .seat-picker__row__number {
-            margin-bottom: -8px;
-            color: orange;
-          }
-        }
-      }
-      .col-3 {
-        line-height: 30px;
-        .btPay {
-          display: block;
-          text-transform: uppercase;
-          padding: 10px 30px 10px 25px;
-          font-size: 14px;
-          font-weight: bold;
-          color: orange;
-          background: none;
-          text-align: center;
-          border-radius: 4px;
-          margin-top: 5px;
-          margin-bottom: 10px;
-          border: 1px solid whitesmoke;
-          cursor: pointer;
-          &:hover {
-            box-shadow: 0 0 8px orange;
-            color: orange;
-            border: 1px solid orange;
-          }
-        }
-        .optionpay {
-          button {
-            padding: 10px 20px 10px 15px;
-            font-size: 15px;
-            font-weight: bold;
-            color: whitesmoke;
-            background: none;
-            text-align: center;
-            border-radius: 5px;
-            margin-top: 5px;
-            border: 1px solid orange;
-            cursor: pointer;
-            &:hover {
-              box-shadow: 0 0 5px orange;
-              background-color: orange;
-              border: 1px solid orange;
-              i {
-                color: whitesmoke;
-              }
-            }
-            i {
-              color: orange;
-            }
-          }
-        }
-      }
-    }
-  }
+					.seat-picker__row__number {
+						margin-bottom: -8px;
+						color: orange;
+					}
+				}
+			}
+			.col-3 {
+				line-height: 30px;
+				.btPay {
+					display: block;
+					text-transform: uppercase;
+					padding: 10px 30px 10px 25px;
+					font-size: 14px;
+					font-weight: bold;
+					color: orange;
+					background: none;
+					text-align: center;
+					border-radius: 4px;
+					margin-top: 5px;
+					margin-bottom: 10px;
+					border: 1px solid whitesmoke;
+					cursor: pointer;
+					&:hover {
+						box-shadow: 0 0 8px orange;
+						color: orange;
+						border: 1px solid orange;
+					}
+				}
+				.optionpay {
+					display: grid;
+					row-gap: 10px;
+					button {
+						width: 50%;
+						font-weight: bold;
+						color: whitesmoke;
+						background: none;
+						text-align: center;
+						border-radius: 5px;
+						margin-top: 5px;
+						border: 1px solid orange;
+						cursor: pointer;
+						&:hover {
+							box-shadow: 0 0 5px orange;
+							background-color: orange;
+							border: 1px solid orange;
+							i {
+								color: whitesmoke;
+							}
+						}
+						i {
+							color: orange;
+						}
+					}
+				}
+			}
+		}
+	}
 }
